docs+fix: complete L10 documentation overhaul and finalization hardening
Rewrote all 7 module docs to cover Phase 3 fully: 41 OperationTypes,
JvmRuntimeAdvice, 42 BootstrapDispatcher handles, all 15 stressors, 24
effect types, and all 14 selector types. Adds ROADMAP.md and rewrites
root README with complete API reference.

Code changes:
- ActivationPolicy: add maxApplications(0) guard and builder overload
- CompatibilityValidator: add destructive-effect safeguard checks
- ChaosRuntime: fix session-scope validation ordering
- DestructiveEffectSafeguardTest: new test for validator guards
- ChaosPlanMapperTest: extend coverage for Phase 3 effect round-trips
- MaxApplicationsConcurrencyTest: fix assertion precision