@@ -1,308 +1,203 @@
+<!--
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+  Engineered by  Christian Schnapka
+                 Principal+ Embedded Systems Engineer
+                 Macstab GmbH · Hamburg, Germany
+                 https://macstab.com
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+-->
+
+# chaos-agent-bootstrap — Agent Entry Point Reference
+
+> Internal reference for agent initialization, singleton management, premain/agentmain dispatch, and JMX MBean registration.
+> 
+> *Engineered by* **[Christian Schnapka](https://macstab.com)** — Principal+ Embedded Systems Engineer · [Macstab GmbH](https://macstab.com) · Hamburg, Germany
+
+---
+
 # 1. Overview
 
 ## Purpose
 
-`chaos-agent-bootstrap` is the deployment-facing entrypoint layer. It converts JVM agent entry hooks or local self-attach into a live `ChaosRuntime`, wires instrumentation, loads optional startup configuration, and exposes diagnostics through JMX.
+`chaos-agent-bootstrap` is the JVM agent entry point. It owns:
+- `premain(agentArgs, instrumentation)` — JVM calls this when the agent is specified via `-javaagent:`
+- `agentmain(agentArgs, instrumentation)` — JVM calls this for dynamic attach via the Attach API
+- Singleton `ChaosRuntime` creation and lifecycle
+- Calling `JdkInstrumentationInstaller.install()` with the correct premain/agentmain mode flag
+- Loading the `ChaosPlan` from startup configuration via `StartupConfigLoader`
+- Registering the `ChaosDiagnostics` JMX MBean
+- `ChaosPlatform.installLocally()` — self-attach path used by `chaos-agent-testkit`
 
 ## Scope
 
 In scope:
-
-- `premain` and `agentmain`
-- local self-attach for tests and examples
-- singleton runtime installation
-- startup plan loading
-- MBean registration
-- deployable agent jar packaging
+- Agent manifest entry points
+- Singleton `ChaosRuntime` management (AtomicReference)
+- JMX MBean registration/deregistration
+- Startup config delegation to `StartupConfigLoader`
 
 Out of scope:
-
-- scenario matching
-- per-invocation decision logic
-- selector/effect semantics
-
-## Assumptions
-
-- installation is a privileged action performed by a trusted operator or test harness
-- bootstrap is effectively a one-time process initialization step
+- Scenario policy (delegated to `chaos-agent-core`)
+- Instrumentation wiring (delegated to `chaos-agent-instrumentation-jdk`)
+- Configuration parsing (delegated to `chaos-agent-startup-config`)
 
 ## Non-Goals
 
-- true runtime uninstall
-- remote lifecycle management
-- concurrent multi-owner initialization coordination
+- Multi-instance support (one `ChaosRuntime` per JVM, enforced by singleton pattern)
+- Remote control plane (no network listener)
 
-# 2. Architectural Context
+---
 
-This module sits at the boundary between JVM process startup or attach mechanisms and the internal runtime.
+# 2. Engineerural Context
 
-Dependency direction:
+**Dependencies** (outbound):
+- `chaos-agent-core` (`ChaosRuntime`)
+- `chaos-agent-instrumentation-jdk` (`JdkInstrumentationInstaller`)
+- `chaos-agent-startup-config` (`StartupConfigLoader`)
+- `chaos-agent-api`
 
-- depends on `chaos-agent-api`
-- depends on `chaos-agent-core`
-- depends on `chaos-agent-instrumentation-jdk`
-- depends on `chaos-agent-startup-config`
-- depends on Byte Buddy Agent for local self-attach
+**Called by**:
+- JVM agent infrastructure (`premain`, `agentmain`)
+- `chaos-agent-testkit` (`ChaosPlatform.installLocally()`)
 
-Trust boundary:
+---
 
-- same trust domain as the target JVM
-- no internal authz boundary before installation
+# 3. Initialization Sequence
 
-Deployment boundary:
+## Premain (startup attachment)
 
-- this is the jar you ship for `-javaagent`
-
-# 3. Key Concepts And Terminology
-
-- Agent entrypoint: `premain` or `agentmain`
-- Local install: self-attach path used by tests
-- Runtime singleton: the `AtomicReference<ChaosRuntime>` held by `ChaosAgentBootstrap`
-- Loaded plan: startup config materialized into `StartupConfigLoader.LoadedPlan`
-- Diagnostics MBean: `com.macstab.chaos:type=ChaosDiagnostics`
-
-# 4. End-to-End Behavior
-
-## Startup Install
-
-1. JVM launches with `-javaagent:...`.
-2. `premain(...)` invokes `initialize(...)`.
-3. A new `ChaosRuntime` is created if one is not already visible.
-4. JDK instrumentation is installed.
-5. The diagnostics MBean is registered.
-6. Startup config is resolved from agent args and environment.
-7. If a plan exists, it is activated immediately.
-8. Optional debug dump is printed to `stderr`.
-
-## Local Install
-
-1. Caller invokes `ChaosPlatform.installLocally()`.
-2. `ByteBuddyAgent.install()` attaches the agent to the current JVM.
-3. `initialize("", instrumentation, Map.of())` runs with no environment-based startup config.
-4. The returned object is the same singleton control plane used by subsequent calls.
-
-## Important Current Semantics
-
-- repeated installation returns the existing runtime if already published
-- `ChaosPlatform.current()` is only valid after installation
-- `ChaosControlPlane.close()` on the returned runtime does not uninstall the agent or clear the singleton reference
-
-# 5. Architecture Diagrams
-
-## Bootstrap Sequence
-
-Question answered: what does bootstrap do before the application ever hits an instrumented path?
-
-```plantuml
-@startuml
-actor "JVM / Caller" as Trigger
-participant "ChaosAgentBootstrap" as Bootstrap
-participant "ChaosRuntime" as Runtime
-participant "JdkInstrumentationInstaller" as Installer
-participant "StartupConfigLoader" as Loader
-participant "PlatformMBeanServer" as Jmx
-
-Trigger -> Bootstrap : premain()/agentmain()/installForLocalTests()
-Bootstrap -> Runtime : new ChaosRuntime()
-Bootstrap -> Installer : install(instrumentation, runtime)
-Bootstrap -> Jmx : register diagnostics MBean
-Bootstrap -> Loader : load(agentArgs, environment)
-Loader --> Bootstrap : optional LoadedPlan
-Bootstrap -> Runtime : activate(plan)
-Bootstrap --> Trigger : ChaosControlPlane
-@enduml
+```
+-javaagent:chaos-agent-bootstrap.jar[=agentArgs]
+  ↓
+JVM calls: ChaosAgentBootstrap.premain(agentArgs, instrumentation)
+  ↓
+if (singleton ChaosRuntime already set) → return (idempotent guard)
+  ↓
+ChaosRuntime runtime = new ChaosRuntime()
+  ↓
+JdkInstrumentationInstaller.install(instrumentation, runtime, premainMode=true)
+  — Phase 1 + Phase 2 instrumentation
+  ↓
+Optional<StartupConfigLoader.LoadedPlan> plan =
+    StartupConfigLoader.load(agentArgs, System.getenv())
+  if plan present:
+    runtime.activate(plan.get().plan())
+    if plan.get().debugDumpOnStart():
+      System.out.println(runtime.diagnostics().debugDump())
+  ↓
+registerMBean(runtime.diagnostics())
+  ↓
+runtime.setInstrumentation(instrumentation)
+  ↓
+RUNTIME_REF.set(runtime)   // AtomicReference; last write; visible to all threads
 ```
 
-Main takeaway: bootstrap is front-loaded work. Once installation completes, the steady-state behavior moves into instrumentation and core.
+## Agentmain (dynamic attach)
 
-No deployment diagram is included because placement is trivial: one JVM, one agent, one runtime singleton.
-
-# 6. Component Breakdown
-
-## `ChaosAgentBootstrap`
-
-Responsibility:
-
-- own installation entrypoints
-- own the singleton runtime reference
-- orchestrate instrumentation and startup plan activation
-
-Why this design exists:
-
-- centralizes all installation modes behind one initialization path
-- keeps startup behavior consistent between `premain`, `agentmain`, and local attach
-
-## `ChaosPlatform`
-
-Responsibility:
-
-- provide a smaller public facade for application and test code
-
-Why this design exists:
-
-- hides the lower-level bootstrap class from ordinary consumers
-
-## `ChaosDiagnosticsMxBean`
-
-Responsibility:
-
-- expose `debugDump()` over JMX
-
-Why this design exists:
-
-- provide a low-friction operational introspection surface with no extra dependencies
-
-# 7. Data Model And State
-
-## Singleton State
-
-The module owns:
-
-- `AtomicReference<ChaosRuntime> RUNTIME`
-
-This is the bootstrap-level lifecycle anchor. Once populated, later callers reuse the same runtime.
-
-## Startup Config State
-
-`StartupConfigLoader.LoadedPlan` carries:
-
-- parsed `ChaosPlan`
-- source description
-- debug dump flag
-
-The bootstrap layer currently uses:
-
-- the plan itself
-- the debug dump flag
-
-It does not otherwise preserve source metadata for later operator-facing use.
-
-## Packaging State
-
-The bootstrap jar manifest declares:
-
-- `Premain-Class`
-- `Agent-Class`
-- `Can-Redefine-Classes`
-- `Can-Retransform-Classes`
-
-The jar task also folds runtime dependencies into the artifact, making bootstrap the deployable unit.
-
-# 8. Concurrency And Threading Model
-
-Initialization is intended to be effectively single-threaded, but the code is only partially hardened against concurrent installs.
-
-Important details:
-
-- `initialize(...)` checks the singleton before work, but publishes it only after instrumentation, MBean registration, and plan activation
-- two concurrent initializations can therefore duplicate pre-publication work before one wins the `compareAndSet`
-- MBean registration uses a check-then-register pattern rather than an atomic register-if-absent primitive
-
-This is acceptable for the intended usage pattern, but it is not a strong concurrent bootstrap protocol.
-
-# 9. Error Handling And Failure Modes
-
-Expected bootstrap failures:
-
-- local self-attach unavailable or denied
-- instrumentation installation failure
-- startup config file unreadable
-- startup config JSON invalid
-- MBean registration failure
-
-Important operational limitation:
-
-- a successful install followed by `close()` leaves instrumentation in place and leaves `RUNTIME` populated. The process is still instrumented; it just no longer has active scenarios.
-
-This is a major semantic distinction. `close()` is controller shutdown, not agent removal.
-
-# 10. Security Model
-
-Bootstrap is a privileged layer.
-
-- attaching an agent to a JVM is already a high-trust operation
-- startup config is executed as control-plane input with full effect on thread behavior and resource consumption
-- JMX exposure inherits the process’s JMX exposure posture
-
-There is no additional security boundary inside this module.
-
-# 11. Performance Model
-
-Bootstrap cost is front-loaded:
-
-- Byte Buddy installation
-- bridge injection into the bootstrap classloader
-- optional JSON parse and plan activation
-- MBean registration
-
-Steady-state runtime cost is not owned by this module after initialization completes.
-
-# 12. Observability And Operations
-
-Operator-visible surfaces created by bootstrap:
-
-- MBean `com.macstab.chaos:type=ChaosDiagnostics`
-- optional `stderr` debug dump on startup
-
-Bootstrap does not create health checks, readiness semantics, or any external telemetry pipeline. It only exposes the core diagnostics object.
-
-# 13. Configuration Reference
-
-Bootstrap consumes:
-
-- raw agent args
-- environment variables interpreted by `StartupConfigLoader`
-
-Examples:
-
-```bash
-java -javaagent:chaos-agent-bootstrap.jar=configFile=/opt/app/chaos-plan.json -jar app.jar
 ```
+VirtualMachine.attach(pid).loadAgent("chaos-agent-bootstrap.jar", agentArgs)
+  ↓
+JVM calls: ChaosAgentBootstrap.agentmain(agentArgs, instrumentation)
+  ↓
+Same flow as premain EXCEPT:
+  JdkInstrumentationInstaller.install(instrumentation, runtime, premainMode=false)
+  — Phase 1 instrumentation ONLY (no Phase 2 retransformation)
+```
+
+## Idempotency
+
+`premain`/`agentmain` first checks `RUNTIME_REF.get() != null`. If the runtime is already installed, the method returns immediately. This prevents double-installation in test environments where multiple classes call `ChaosTestKit.install()` concurrently before the first install completes.
+
+**Race condition**: Two threads calling `installLocally()` concurrently could both observe `RUNTIME_REF.get() == null` and both attempt installation. The `AtomicReference.compareAndSet()` in the final step ensures only one succeeds; the loser's `ChaosRuntime` is discarded. However, `JdkInstrumentationInstaller.install()` may run twice in this race, attempting to register ByteBuddy transformations twice. ByteBuddy handles duplicate registrations gracefully (no-op for already-woven methods), but this is a latent inefficiency. In practice, concurrent `installLocally()` calls are rare.
+
+---
+
+# 4. ChaosPlatform — Self-Attach Path
+
+`ChaosPlatform.installLocally()` is called by `ChaosTestKit.install()` in test environments that do not use `-javaagent:`. The self-attach sequence:
+
+```
+if (RUNTIME_REF.get() != null) return existing runtime
+
+// Locate the agent JAR (own classpath)
+URL agentJar = findAgentJar()
+
+// Use the Attach API to self-attach
+VirtualMachine vm = VirtualMachine.attach(ProcessHandle.current().pid().toString())
+vm.loadAgent(agentJar.getPath())
+vm.detach()
+
+// After loadAgent(), agentmain() has run → RUNTIME_REF is set
+return RUNTIME_REF.get()
+```
+
+**JDK requirement**: Self-attach requires `com.sun.tools.attach.VirtualMachine` and the Attach API, available in the JDK (not JRE). On JDK 9+, self-attach may be restricted by the JVM flag `-Djdk.attach.allowAttachSelf=true` (which must be set on the target JVM). `ChaosAgentExtension` sets this system property before attempting self-attach.
+
+**Fallback**: If self-attach fails (e.g., on a JRE without tools.jar, or when the attach API is not available), `installLocally()` throws `IllegalStateException`.
+
+---
+
+# 5. JMX MBean
+
+The MBean is registered at `com.macstab.chaos:type=ChaosDiagnostics`.
+
+**Interface**: The MBean exposes `ChaosDiagnostics`:
+- `snapshot()` → `Snapshot` (serialized as JMX composite data)
+- `debugDump()` → `String` (full human-readable diagnostic text)
+- `scenario(String id)` → `Optional<ScenarioReport>` (may not be directly JMX-composable; use `debugDump()` for operator inspection)
+
+**Registration**: Uses `ManagementFactory.getPlatformMBeanServer()`. If the MBean is already registered (e.g., from a prior `installLocally()` call in the same JVM), the existing registration is reused.
+
+**Deregistration**: Not performed automatically. The MBean persists for the JVM lifetime. This is consistent with the agent's design principle that instrumentation is permanent.
+
+---
+
+# 6. Singleton and Lifecycle
 
 ```java
-ChaosControlPlane controlPlane = ChaosPlatform.installLocally();
+private static final AtomicReference<ChaosRuntime> RUNTIME_REF = new AtomicReference<>();
+
+public static ChaosControlPlane current() {
+    ChaosRuntime runtime = RUNTIME_REF.get();
+    if (runtime == null) throw new IllegalStateException("agent not installed");
+    return runtime;
+}
 ```
 
-For exact config precedence and parsing rules, see [startup-config.md](startup-config.md).
+`RUNTIME_REF` is the authoritative reference. Once set, it is never cleared or replaced. `ChaosControlPlane.close()` stops all active scenarios but does not null out `RUNTIME_REF`.
 
-# 14. Extension Points And Compatibility Guarantees
+---
 
-Treat this module as internal runtime machinery. Stable caller-facing entrypoints are limited to:
+# 7. Error Handling
 
-- `ChaosPlatform.installLocally()`
-- `ChaosPlatform.current()`
+| Failure | Behavior |
+|---------|----------|
+| Config file not found / parse error | `ConfigLoadException` thrown; agent startup fails; JVM may not start (depends on JVM's `-javaagent` error policy) |
+| ByteBuddy transformation failure for a class | Warning logged; specific class uninstrumented; agent continues |
+| Bootstrap bridge injection failure | `IllegalStateException`; agent startup fails |
+| MBean registration failure | Warning logged; diagnostics accessible only via API; agent continues |
+| `installLocally()` self-attach failure | `IllegalStateException` propagated to `ChaosTestKit.install()` caller |
 
-Everything else is bootstrap implementation detail.
+---
 
-# 15. Stack Walkdown
+# 8. References
 
-## API Layer
+- Reference: `java.lang.instrument.Instrumentation` — `premain`, `agentmain`, manifest attributes (`Premain-Class`, `Agent-Class`, `Can-Retransform-Classes`) — https://docs.oracle.com/en/java/docs/api/java.instrument/java/lang/instrument/Instrumentation.html
+- Reference: Java SE API — `com.sun.tools.attach.VirtualMachine` (self-attach via Attach API) — https://docs.oracle.com/en/java/docs/api/jdk.attach/com/sun/tools/attach/VirtualMachine.html
+- Reference: Java SE API — `javax.management.MBeanServer`, `ManagementFactory.getPlatformMBeanServer()` — https://docs.oracle.com/en/java/docs/api/java.management/javax/management/MBeanServer.html
+- Reference: Java SE API — `java.util.concurrent.atomic.AtomicReference` — https://docs.oracle.com/en/java/docs/api/java.base/java/util/concurrent/atomic/AtomicReference.html
+- Reference: JEP 451 — `jdk.attach.allowAttachSelf` restriction (JDK 9+) — https://openjdk.org/jeps/451
 
-Bootstrap returns a `ChaosControlPlane`, but does not define its contract.
+---
 
-## Application / Runtime Layer
+<div align="center">
 
-This is the handoff boundary from install-time orchestration into steady-state runtime behavior.
+*Engineerure, implementation, and documentation crafted by*
 
-## JVM Layer
+**[Christian Schnapka](https://macstab.com)**  
+Principal+ Embedded Systems Engineer  
+[Macstab GmbH](https://macstab.com) · Hamburg, Germany
 
-Materially relevant. `premain`, `agentmain`, instrumentation, retransformation, and self-attach all depend on JVM-level capabilities.
+*Building systems that operate correctly at the edges — including the ones you deliberately break.*
 
-## Memory / Concurrency Layer
-
-Relevant only for singleton publication and concurrent initialization races.
-
-## OS / Container Layer
-
-Materially relevant for local attach, which may be restricted by JVM flags, process privileges, or container hardening.
-
-## Infrastructure Layer
-
-Only indirectly relevant through whatever environment variables, startup scripts, or JMX export configuration the surrounding platform provides.
-
-# 16. References
-
-- Reference: Java Platform SE API Specification — `java.lang.instrument`
-- Reference: Java Platform SE API Specification — `java.lang.management`
-- Reference: Java Platform SE API Specification — `javax.management`
-
+</div>
